# feishu-approval

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SKILL.md  approval-code-map.local.md.example  approval-code-map.md
crates/feishu-approval-tool/: Cargo.toml
crates/feishu-approval-tool/src/: api_paths.rs  lib.rs  main.rs
crates/feishu-approval-tool/src/cli/: exec.rs  handlers.rs  json_util.rs  mod.rs  output.rs
crates/feishu-approval-tool/src/cli/handlers/: approval.rs  comment.rs  instance.rs  mod.rs  task.rs  util.rs  wizard.rs
crates/feishu-approval-tool/tests/: real_api.rs
docs/: AI.md  approval-code-map.local.template.md
docs/examples/: approval-data.sample.json  expense-reimbursement-widgets.sample.json  form-widgets.sample.json  instance-create-extra.sample.json
embedded-docs/: INDEX.md
embedded-docs/event/: custom-approval-event.md  leave.md  out-of-office.md  overtime.md
embedded-docs/event/common-event/: approval-task-event.md
embedded-docs/extra/: uUDOyUjL1gjM14SN4ITN.md  ugDNyYjL4QjM24CO0IjN.md
embedded-docs/reference/approval-v4/: approval-overview.md  approval-related-faqs.md
embedded-docs/reference/approval-v4/approval/: create.md  overview-of-approval-resources.md  subscribe.md
embedded-docs/reference/approval-v4/district/: list.md
embedded-docs/reference/approval-v4/external_approval/: get.md  overview.md
embedded-docs/reference/approval-v4/task/: query.md  (+2 more)
embedded-docs/ukTM5UjL5ETO14SOxkTN/: approval-task-addsign.md
embedded-docs/ukjNyYjL5YjM24SO2IjN/: official-approval-connector.md
skills/feishu-approval/: SKILL.md
(+41 files in other folders)
