[package]
name = "feishu-approval-tool"
version = "0.1.0"
edition = "2021"
description = "Feishu workflow approval CLI (v4) + OpenApiClient library for the feishu-approval skill"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"
name = "feishu_approval_tool"

[[bin]]
name = "feishu-approval-tool"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "multipart", "query", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
